gccida/c1/clear_storage
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3044:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3058:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3059:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3061:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3062:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3063:5: error: expected ';' after expression
tree v29; // rbp 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3063:6: error: use of undeclared identifier 'v29'
tree v29; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3064:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3065:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3066:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3067:5: error: expected ';' after expression
tree v33; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3067:6: error: use of undeclared identifier 'v33'
tree v33; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3068:5: error: expected ';' after expression
tree v34; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3068:6: error: use of undeclared identifier 'v34'
tree v34; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3077:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64)object[1]; 
               ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3085:40: error: use of undeclared identifier 'machine_mode'
mode_alignment = get_mode_alignment( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)object)); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3085:55: error: expected expression
mode_alignment = get_mode_alignment( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)object)); 
                                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3118:27: error: use of undeclared identifier 'machine_mode'
v22 = copy_to_mode_reg( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), to->fld[0].rtx); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/expr.c:3120:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( sizetype_tab[0]->block.abstract_origin)) >> 1), 
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/clear_storage/src/obj/expr.o] Error 1
